@@ -1,0 +1,8 @@
+Syntax:
+ use <item1> with <item2>
+
+Will try to use both items together.
+
+Result depends on the items themselves.
+
+The order is important.
